Prevent dark mode flash on page refresh (#182)

--- a/src/assets/styles/base/_common.scss
+++ b/src/assets/styles/base/_common.scss
@@ -129,6 +129,10 @@ a {
   @extend %visuallyhidden;
 }
 
+html {
+  background-color: var(--gray-000);
+}
+
 // color
 $palette: (
   'gray': (
